--- a/package.json
+++ b/package.json
@@ -1,49 +1,26 @@
 {
-  "name": "project-clothica-team-04-backend",
+  "name": "meeting-booking-backend",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "lint": "eslint ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Veron0013/project-clothica-team-04-backend.git"
-  },
-  "keywords": [],
+  "description": "Meeting booking system backend (clients & businesses)",
   "author": "",
   "license": "ISC",
   "type": "module",
-  "bugs": {
-    "url": "https://github.com/Veron0013/project-clothica-team-04-backend/issues"
+  "main": "src/server.js",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "lint": "eslint ."
   },
-  "homepage": "https://github.com/Veron0013/project-clothica-team-04-backend#readme",
-  "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "celebrate": "^15.0.3",
-    "cloudinary": "^2.8.0",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.19",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "handlebars": "^4.7.8",
-    "http-errors": "^2.0.0",
+    "express": "^4.19.2",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
-    "libphonenumber-js": "^1.12.26",
     "mongoose": "^8.19.3",
-    "morgan": "^1.10.1",
-    "multer": "^2.0.2",
-    "nodemailer": "^7.0.10",
-    "path": "^0.12.7",
-    "pino-http": "^10.5.0",
-    "pino-pretty": "^13.1.2",
-    "sib-api-v3-sdk": "^8.5.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
-    "yamljs": "^0.3.0"
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
